src/styles/footer.scss
//All footer related styles go here -> NO!
@import "global";

footer {
  border-top: 1px solid $very-light-grey;
  padding-top: 2%;
  margin-top: 57%;
  position: absolute;
  .container {
    font-size:0.8em;
    border-top: 3px solid black;
    padding-top: 12px;
  }
}


ul {
  list-style-type: none;
  li {
    padding-bottom: 20px;
  }

}
#footer-nav {
  a:link, a:visited {
    text-decoration: none;
  }
  a:hover, a:active {
    text-decoration: underline;
  }
}

